2007-01-08  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/specification.rb
	(Gem::Specification::test_suite_file): Added rescue clause for
	default_executable.
	(Gem::Specification::add_bindir): Added rescue clause for
	add_bindir.

	* test/test_specification.rb
	(TestSpecification::test_pathologically_bad_non_array_stuff_doesnt_goof_up_files):
	Added a sanity check on hash for some pathologically bad case.
	(TestSpecification::test_pathologically_bad_exectuables_doesnt_goof_up_hash):
	Added sanity check for pathologically bad executables field.

2007-01-08  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/gem_commands.rb (Gem::PristineCommand#execute): Better
	messaging.
	* lib/rubygems.rb, lib/rubygems/custom_require.rb: Correctly include
	documentation for methods added to Kernel.

2007-01-07  Eric Hodel  <drbrain@segment7.net>

	* Rakefile: Include GPL.txt.  Fixes bug #7572 by David Lee.

2007-01-06  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/rubygems_version.rb (Gem): Bumped to version
	0.9.0.9.

	* lib/rubygems/specification.rb
	(Gem::Specification::test_suite_file): Rewrote default_executable
	to be a bit more explicit.
	(Gem::Specification::add_bindir): Rewrote the 'files' accessor to
	handle pathologically bad input.
	(Gem::Specification::copy_of): Added as_array private method.

	* Rakefile (package_version): Added '*.out' to clobber list.
	Removed the broken-1.0.0.gem file from the clobber list.

	* test/test_specification.rb
	(TestSpecification::test_default_executable):
	Seriously beefed up tests for certain specification issues.

	* test/gemenvironment.rb (TestEnvironment::create): Added the 'f'
	flag to deleting 'gemhome'.

2006-12-30  Eric Hodel  <drbrain@segment7.net>

	* post-install.rb, lib/rubygems/server.rb: RubyGems now installs RDoc
	and ri for itself.

2006-12-28  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb (Gem::Installer#build_extensions):